@@ -1,3 +1,8 @@
+2002-10-16 Oliver Rauch <Oliver.Rauch@rauch-domain.de>
+
+	* backend/umax.c, umax-scanner.c: added Power Look 2000
+	  as supported device, build 38
+
 2002-10-15  Gerhard Jaeger <gerhard@gjaeger.de>
 
 	* doc/sane-plustek.man: Major update
